# flask_esports

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
esports_api/: __init__.py  config.py  source.py  source_id.py
esports_api/app/: __init__.py
esports_api/app/db/: db.py  query_factory.py  schema.sql
esports_api/app/models/: __init__.py  match.py  player.py  team.py
esports_api/app/resources/: __init__.py  match.py  player.py  team.py
esports_api/app/tf2/: __init__.py  routes.py
esports_api/app/valorant/: __init__.py  constants.py  routes.py
esports_api/utils/: __init__.py  decorators.py  game_router.py  scraping.py  test_helpers.py
flask_esports/: __init__.py  game_blueprint.py  game_router.py
flask_esports/app/: __init__.py  response_factory.py
flask_esports/app/db/: db.py  query_factory.py
flask_esports/app/resources/: __init__.py  player.py  team.py
flask_esports/scraping/: __init__.py  utils.py  xpath.py
flask_esports/utils/: __init__.py  decorators.py  scraping.py
scripts/: create_app.py
src/flask_esports/: __init__.py  config.py  source.py
src/flask_esports/api/: __init__.py  blueprint.py  game_blueprint.py  game_router.py  response.py  response_factory.py  source.py
src/flask_esports/app/: __init__.py
src/flask_esports/app/db/: db.py  query_factory.py
src/flask_esports/app/resources/: __init__.py  associations.py  match.py  player.py  resource.py  team.py
src/flask_esports/resources/: __init__.py  associations.py  event.py  match.py  player.py  team.py
src/flask_esports/scraping/: utils.py  xpath.py
src/flask_esports/utils/: __init__.py  decorators.py
tests/: conftest.py  helpers.py  test_source.py
tests/api/: test_blueprint.py  test_source.py
tests/db_/: test_query_factory.py
tests/endpoints/: test_tf2.py  test_valorant.py
tests/scraping/: test_utils.py  test_xpath.py
tests/utils_/: test_decorators.py  test_game_blueprint.py  test_response_factory.py  test_scraping.py
